--- a/HTML/Login.html
+++ b/HTML/Login.html
@@ -197,10 +197,10 @@ a {
                     </div>
                     <div class="row px-3"> <label class="mb-1">
                             <h6 class="mb-0 text-sm">Username</h6>
-                        </label> <input class="mb-4" type="text" name="email" placeholder="Enter a valid username"> </div>
+                        </label> <input class="mb-4" type="text" name="email" placeholder="Masukkan Username"> </div>
                     <div class="row px-3"> <label class="mb-1">
                             <h6 class="mb-0 text-sm">Password</h6>
-                        </label> <input type="password" name="password" placeholder="Enter password"> </div>
+                        </label> <input type="password" name="password" placeholder="Masukkan Password"> </div>
                     <div class="row px-3 mb-4">
                         <div class="custom-control custom-checkbox custom-control-inline"> <input id="chk1" type="checkbox" name="chk" class="custom-control-input">  </div> 
                     </div>
