--- a/HTML/input-guru.html
+++ b/HTML/input-guru.html
@@ -93,6 +93,15 @@
                         <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
                     </div>
                     <div class="form-group">
+                        <label>Mata Pelajaran yang diampu</label>
+                        <select class="custom-select" required>
+                            <option value="">Pilih Mata Pelajaran</option>
+                            <option value="1">Bahasa Indonesia</option>
+                            <option value="2">Matematika</option>
+                            <option value="3">IPA</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
                         <label for="usernameInput">NIP</label>
                         <input type="username" class="form-control" id="usernameInput" placeholder="Tulis Nomor Induk Pengajar anda" required>
                         <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
